# storymode

./: .gitignore  app.py  audiogen.py  chapter.py  db.py  docker-compose.yml  history.txt  init_db.py  migrate_storage.py  pyproject.toml  storage.py  story.py
migrations/: 01_initial.surql  03_audio_bytes.surql  04_remove_content.surql
static/css/: style.css
static/js/: main.js
templates/: base.html  chapters_list.html  home.html  login.html  story_builder.html  story_editor.html
